bpy.data.objects['XXX'].vertex_groups.new(name = 'Test') #80747

Closed
opened 2020-09-13 16:31:34 +02:00 by burger@wiredworks.com · 9 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: Quadro K2000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 385.69

Blender Version
Broken: version: 2.83.4, branch: master, commit date: 2020-08-05 06:00, hash: c113af8288
Worked: (newest version of Blender that worked as expected)

Short description of error

bpy.data.objects['XXX'].vertex_groups.new(name = 'Test')
returns 'NoneType'

Exact steps for others to reproduce the error

start Blender -> delete Cube -> add Curve -> Path

go scripting

D.objects['NurbsPath'].vertex_groups.new(name = 'Test')
A = D.objects['NurbsPath'].vertex_groups.new(name = 'Test')
type(A)
class 'NoneType'>

even if this is the expected behavior -- throwing an exception would be nice

THX
Martin

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: Quadro K2000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 385.69 **Blender Version** Broken: version: 2.83.4, branch: master, commit date: 2020-08-05 06:00, hash: `c113af8288` Worked: (newest version of Blender that worked as expected) **Short description of error** bpy.data.objects['XXX'].vertex_groups.new(name = 'Test') returns 'NoneType' **Exact steps for others to reproduce the error** start Blender -> delete Cube -> add Curve -> Path go scripting >>> D.objects['NurbsPath'].vertex_groups.new(name = 'Test') >>> A = D.objects['NurbsPath'].vertex_groups.new(name = 'Test') >>> type(A) >>>class 'NoneType'> even if this is the expected behavior -- throwing an exception would be nice THX Martin

Added subscriber: @martburg

Added subscriber: @martburg

This issue was referenced by f28adaef52

This issue was referenced by f28adaef520c85ab1ea8bc1fb149045a38967431

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-14 10:27:52 +02:00
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Campbell Barton was unassigned by Philipp Oeser 2020-09-14 10:30:01 +02:00
Philipp Oeser self-assigned this 2020-09-14 10:30:01 +02:00
Member

I think what is usually done is report this via the report system, and yes, think we should do this.
Patch incoming.

I think what is usually done is report this via the report system, and yes, think we should do this. Patch incoming.
Member

Ah, OK, Campbell was quicker :)

Ah, OK, Campbell was quicker :)
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Sorry, my comment reopened the report, but is actually resolved of course.

Sorry, my comment reopened the report, but is actually resolved of course.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80747
No description provided.