Fix T80747: New vgroups on unsupported object types fails silently

Raise an exceptions when adding vertex groups to object types
that don't support it.